<resources>
    <string name="app_name">AELMachineTest</string>
    <string name="str_top_selling">Top Selling</string>
    <string name="str_buy">Buy</string>
    <string name="str_buy_now">Buy Now</string>
    <string name="str_course_code">Course Code</string>
    <string name="str_author">Author</string>
    <string name="str_university">University</string>
    <string name="str_regulation">Regulation</string>
    <string name="str_categories">Categories</string>
    <string name="str_format_type">Format/Type</string>
    <string name="str_related_books">Related Books</string>
    <string name="str_note">NOTE</string>
    <string name="str_this_is_a_digital_e_book_no_physical_copy_of_e_book_will_be_delivered">This is a digital e-book.No physical copy of e book will be delivered.</string>
</resources>