<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbars"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="304dp"
            android:layout_weight="6"
            android:background="@drawable/bg_book_details_shape"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBookName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:paddingStart="@dimen/dimen_10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOfferedBy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:paddingStart="@dimen/dimen_10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imvBookDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCrossedPrice"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="end|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btBuyNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight=".5"
                android:text="@string/str_buy_now" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_course_code" />

                <TextView
                    android:id="@+id/tvCourseCode"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_author" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_university" />

                <TextView
                    android:id="@+id/tvUniversity"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_regulation" />

                <TextView
                    android:id="@+id/tvRegulation"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_categories" />

                <TextView
                    android:id="@+id/tvCategories"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:text="@string/str_format_type" />


             <androidx.cardview.widget.CardView
                 android:layout_width="@dimen/dimen_0dp"
                 android:layout_height="match_parent"
                 app:cardCornerRadius="5dp"
                 android:layout_marginStart="@dimen/dimen_10dp"
                 android:layout_weight=".5"
                 android:background="#22E0F8">
                 <TextView
                     android:id="@+id/tvFormat"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
                     android:background="#22E0F8"
                     android:text="e-Book"
                     android:gravity="start|center_vertical"
                     android:paddingStart="@dimen/dimen_10dp" />
             </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="start|center_horizontal"
                        android:paddingStart="@dimen/dimen_10dp"
                        android:textColor="#FFEB3B"
                        android:text="@string/str_note" />

                    <TextView
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:text="@string/str_this_is_a_digital_e_book_no_physical_copy_of_e_book_will_be_delivered"
                        android:paddingStart="@dimen/dimen_10dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_related_books"
            android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRelatedBooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/rv_realted_books_layout" />
    </LinearLayout>

</ScrollView>